k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: techsalary-ingress
  namespace: app
spec:
  ingressClassName: nginx
  rules:
    #- host: techsalary.com
    - http:
        paths:
          # 1. Allow all actual API traffic through untouched
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: techsalary-bff
                port:
                  number: 8000

          # 2. Allow the Swagger UI HTML page through
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: techsalary-bff
                port:
                  number: 8000

          # 3. Allow the JSON schema that Swagger needs to render the page
          - path: /openapi.json
            pathType: ImplementationSpecific
            backend:
              service:
                name: techsalary-bff
                port:
                  number: 8000

          - path: /health
            pathType: Prefix
            backend:
              service:
                name: techsalary-bff
                port:
                  number: 8000

          # Add the Frontend route here later
          - path: /api/v1/salary
            pathType: Prefix
            backend:
              service:
                name: techsalary-salary
                port:
                  number: 8003

          - path: /api/v1/search
            pathType: Prefix
            backend:
              service:
                name: techsalary-search
                port:
                  number: 8004

          - path: /vote
            pathType: Prefix
            backend:
              service:
                name: techsalary-vote
                port:
                  number: 8005

          - path: /api/v1/stats
            pathType: Prefix
            backend:
              service:
                name: techsalary-stats
                port:
                  number: 8006
